--- a/Programming Express Website With Custom Css/home.html
+++ b/Programming Express Website With Custom Css/home.html
@@ -13,7 +13,7 @@
             <nav id="navigation">
                 <ul id="nav">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="cources.html">Cources</a></li>
+                    <li><a href="cources.html">Courses</a></li>
                     <li><a href="contact.html" >Contact Us</a></li>
                     <li><a href="sign up page.html"  target="_blank">Sign Up</a></li>
 					
